--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <h1>This is hyper loop website</h1>
 
-    <p>This webiste developed by vamsi krishna orsu</p>
+    
+
+    <h1>Hello</h1>
+    <h1>Hello2</h1>
+    <h1>Hello3</h1>
 </body>
 </html>
