--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
 <body>
     <h1>This is hyper loop website</h1>
 
-    
-
-    <h1>Hello</h1>
-    <h1>Hello2</h1>
-    <h1>Hello3</h1>
+<h2>Hello this is a heading2</h2>
 </body>
 </html>
