--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <h1>This is hyper loop website</h1>
 
 <h2>Hello this is a heading2</h2>
+
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam veritatis, 
+    praesentium illum, est quis vero tenetur aperiam tempore odio, 
+    dignissimos expedita animi harum obcaecati dolorum magnam earum! 
+    Architecto, reprehenderit totam.</p>
 </body>
 </html>
